--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
             image structure.  Since we've also consolodated the CSS to have classes with the same value/pairs into one, we've reflected
             that here in the "Contents" section and the "Benefits" section.
         -->
-        <div id="online-reputation-management" class="content">
+        <section id="online-reputation-management" class="content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-left" alt="picture of computer with word REPUTATION" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="search-engine-optimization" class="content">
+        </section>
+        <section id="search-engine-optimization" class="content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-right" alt="picture of notepad with SEO brainstorm"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="content">
+        </section>
+        <section id="social-media-marketing" class="content">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="picture of people using social media" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </section>
     <aside class="benefits">
         <section class="benefit">
