--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             I'm also going to change the "float-left"/"float-right" to maintain the original look of the left-right-left
             image structure.  Since we've also consolodated the CSS to have classes with the same value/pairs into one, we've reflected
             that here in the "Contents" section and the "Benefits" section.
+
+            NOTE: I realize I probably overthought this and what you REALLY meant by "sequential" is just the header tags being in
+            order in the HTML (i.e. h1, followed by h2, followed by h3).  I figured rather than put these sections back in
+            non-alphabetical order, I'd just make note of my thought process and see what you guys think.
         -->
         <section id="online-reputation-management" class="content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-left" alt="picture of computer with word REPUTATION" />
