Updating one more note on sequential order

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             Since we ordered the list in the header alphabetically, it only makes sense to order the content alphabetically.
             I'm also going to change the "float-left"/"float-right" to maintain the original look of the left-right-left
             image structure.  Since we've also consolodated the CSS to have classes with the same value/pairs into one, we've reflected
-            that here in the "Contents" section and the "Benefits" section.
+            that here in the "Contents" section and the "Benefits" section.  "Sequential" = "Alphabetical" in my mind.
 
-            NOTE: I realize I probably overthought this and what you REALLY meant by "sequential" is just the header tags being in
+            NOTE: I realize I probably overthought this and what you REALLY meant by "sequential" is just the header attributes being in
             order in the HTML (i.e. h1, followed by h2, followed by h3).  I figured rather than put these sections back in
             non-alphabetical order, I'd just make note of my thought process and see what you guys think.
         -->
